--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,16 @@
 {
-    "manifest_version": 3,
-    "name": "LeetCode AI Interviewer",
-    "version": "1.0",
-    "description": "AI-driven mock interview for LeetCode problems",
-    "action": {
-      "default_popup": "index.html",
-      "default_icon": {
-        "16": "icon.png",
-        "48": "icon.png",
-        "128": "icon.png"
-      }
-    },
-    "permissions": ["storage", "tabs", "activeTab", "scripting", "microphone"],
-    "host_permissions": ["https://leetcode.com/problems/*"],
-    "background": {
-      "service_worker": "background.js"
+  "manifest_version": 3,
+  "name": "LeetCode AI Interviewer",
+  "version": "1.0",
+  "description": "AI-driven mock interview for LeetCode problems",
+  "action": {
+    "default_popup": "index.html",
+    "default_icon": {
+      "16": "icon.png",
+      "48": "icon.png",
+      "128": "icon.png"
     }
-  }
+  },
+  "permissions": ["storage", "tabs", "activeTab", "scripting"],
+  "host_permissions": ["https://leetcode.com/problems/*"]
+}
