--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google-cloud/speech": "^6.7.0",
     "@tailwindcss/vite": "^4.0.3",
     "daisyui": "^5.0.0-beta.6",
     "framer-motion": "^12.0.6",
+    "fs": "^0.0.1-security",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^4.0.3"
